--- a/templates/MembershipPay.html
+++ b/templates/MembershipPay.html
@@ -18,13 +18,13 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 </head>
 <body>
-<section>
+<section style="margin-left: 100px;margin-top: 100px;">
   <div class="d-flex justify-content-between align-items-center mb-5">
     <div class="d-flex flex-row align-items-center">
       <h4 class="text-uppercase mt-1">Eligible</h4>
       <span class="ms-2 me-3">Pay</span>
     </div>
-    <a href="#!">Cancel and return to the website</a>
+    <a href="{% url 'home' %}">Cancel and return to the website</a>
   </div>
 
   <div class="row">
